# LogPose

./: .clippy.toml  .dockerignore  .editorconfig  .gitignore  .typos.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.config/: nextest.toml
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  operator-contracts.yml  randomized-service.yml  randomized-storage.yml  release.yml  repo-quality.yml  rust-quality.yml  rust-tests.yml  supply-chain.yml
apps/logpose-cli/: Cargo.toml
apps/logpose-cli/src/: action.rs  cli.rs  direct.rs  execute.rs  feedback.rs  interactive.rs  lib.rs  main.rs  render.rs
apps/logpose-cli/tests/: help.rs  server_workflows.rs  snapshot_contracts.rs  storage_workflows.rs
apps/logpose-cli/tests/snapshots/: snapshot_contracts__diagnostics_placement.snap  snapshot_contracts__diagnostics_status.snap  snapshot_contracts__query_and_inspect.snap
apps/logpose-cli/tests/support/: server_fixture.rs
apps/logpose-server/: Cargo.toml
apps/logpose-server/src/: main.rs
benches/: bootstrap.rs
crates/logpose-api-grpc/: Cargo.toml  build.rs
crates/logpose-api-grpc/src/: lib.rs
crates/logpose-api-rest/: Cargo.toml
crates/logpose-api-rest/src/: lib.rs
crates/logpose-auth/: Cargo.toml
crates/logpose-auth/src/: lib.rs
crates/logpose-catalog/: Cargo.toml
crates/logpose-catalog/src/: lib.rs
crates/logpose-client/: Cargo.toml
crates/logpose-client/src/: lib.rs
crates/logpose-client/tests/: grpc_client.rs
crates/logpose-config/: Cargo.toml
crates/logpose-config/src/: lib.rs
crates/logpose-core/: Cargo.toml
crates/logpose-core/src/: lib.rs
crates/logpose-core/tests/: etcd_metadata.rs
crates/logpose-index/: Cargo.toml
crates/logpose-index/src/: lib.rs
crates/logpose-query/: Cargo.toml
crates/logpose-query/benches/: phase4_ann.rs
crates/logpose-query/src/: lib.rs
crates/logpose-query/tests/: planner_query.rs  storage_exact_query.rs  storage_hybrid_query.rs
crates/logpose-service/: Cargo.toml
crates/logpose-service/src/: lib.rs
crates/logpose-service/tests/: control_plane_service.rs  control_plane_simulation.rs  integration_service.rs  randomized_service.rs
crates/logpose-service/tests/support/: control_plane_simulation.rs  randomized.rs
crates/logpose-storage/: Cargo.toml
crates/logpose-storage-etcd/: Cargo.toml
crates/logpose-storage-etcd/examples/: etcd_coordination_admin.rs  local_coordination_probe.rs
crates/logpose-storage-etcd/src/: lib.rs
crates/logpose-storage/src/: lib.rs
crates/logpose-storage/tests/: integration_storage.rs  randomized_storage.rs
crates/logpose-storage/tests/support/: fs.rs  randomized.rs
crates/logpose-telemetry/: Cargo.toml
crates/logpose-telemetry/src/: lib.rs
crates/logpose-types/: Cargo.toml
crates/logpose-types/src/: lib.rs
crates/logpose-wal/: Cargo.toml
crates/logpose-wal/src/: lib.rs
deploy/: Dockerfile
docs/: book.toml
docs/src/: SUMMARY.md  api-overview.md  architecture.md  better-vector-db.md  configuration.md  contributing.md  future-milestones.md  getting-started.md  operations.md  overview.md  podman-chaos.md  security.md  testing.md
docs/src/future-milestones/: additional-vector-index-families.md  blob-storage-integration.md  endgoal-convergence-and-missing-capabilities.md  full-system-simulation.md  multicluster-metadata-and-consistency.md  phase-1-local-database-core.md  phase-2-write-friendly-storage.md  phase-3-query-planning.md  phase-4-ann-and-hybrid-execution.md  phase-5-distribution-and-operations.md  phase-6-mature-platform.md  web-gui.md
docs/superpowers/plans/: 2026-04-11-logpose-production-scaffold.md
docs/superpowers/specs/: 2026-04-11-logpose-production-scaffold-design.md
openapi/: logpose.v1.yaml
proto/logpose/v1/: logpose.proto
scripts/: check-chaos.sh  check.sh  docs.sh  podman-chaos.sh  pre-push-checks.sh
tests/: smoke_workspace.rs
