[workspace]
members = [
    "apps/logpose-cli",
    "apps/logpose-server",
    "crates/logpose-api-grpc",
    "crates/logpose-api-rest",
    "crates/logpose-auth",
    "crates/logpose-catalog",
    "crates/logpose-client",
    "crates/logpose-config",
    "crates/logpose-core",
    "crates/logpose-index",
    "crates/logpose-query",
    "crates/logpose-service",
    "crates/logpose-storage",
    "crates/logpose-storage-etcd",
    "crates/logpose-telemetry",
    "crates/logpose-types",
    "crates/logpose-wal",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Sumukh Nitundila"]
description = "High-performance, reliable vector database platform."
repository = "https://github.com/logpose/logpose"
homepage = "https://github.com/logpose/logpose"
documentation = "https://github.com/logpose/logpose/tree/main/docs"
readme = "README.md"
keywords = ["vector-database", "search", "retrieval", "grpc", "rest"]
categories = ["database", "database-implementations", "command-line-utilities"]
rust-version = "1.94.1"

[workspace.dependencies]
anyhow = "~1.0"
async-trait = "~0.1"
axum = "~0.8"
clap = { version = "~4.6", features = ["derive", "env"] }
http = "~1.4"
flate2 = "~1.1"
prost = "~0.14"
reqwest = { version = "~0.12", default-features = false }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
tar = "~0.4"
thiserror = "~2.0"
tokio = { version = "~1.51", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "time"] }
tokio-stream = { version = "~0.1", features = ["net"] }
tokio-util = { version = "~0.7", features = ["io"] }
toml = "~1.1"
tonic = { version = "~0.14", features = ["transport"] }
tonic-health = "~0.14"
tonic-prost = "~0.14"
tonic-reflection = "~0.14"
tower = "~0.5"
tower-http = { version = "~0.6", features = ["trace"] }
tracing = "~0.1"
tracing-subscriber = { version = "~0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "~1.23", features = ["serde", "v4"] }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"
panic = "warn"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
