[package]
name = "logpose-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
logpose-config = { path = "../../crates/logpose-config" }
logpose-telemetry = { path = "../../crates/logpose-telemetry" }

