[package]
name = "logpose-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
logpose-config = { path = "../../crates/logpose-config" }
logpose-query = { path = "../../crates/logpose-query" }
logpose-storage = { path = "../../crates/logpose-storage" }
logpose-telemetry = { path = "../../crates/logpose-telemetry" }
logpose-types = { path = "../../crates/logpose-types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
