[package]
name = "logpose-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm = "~0.29"
logpose-client = { path = "../../crates/logpose-client" }
logpose-catalog = { path = "../../crates/logpose-catalog" }
logpose-config = { path = "../../crates/logpose-config" }
logpose-query = { path = "../../crates/logpose-query" }
logpose-storage = { path = "../../crates/logpose-storage" }
logpose-telemetry = { path = "../../crates/logpose-telemetry" }
logpose-types = { path = "../../crates/logpose-types" }
ratatui = "~0.29"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
walkdir = "~2.5"

[dev-dependencies]
insta = { version = "1.43", features = ["json"] }
logpose-api-grpc = { path = "../../crates/logpose-api-grpc" }
logpose-api-rest = { path = "../../crates/logpose-api-rest" }
logpose-core = { path = "../../crates/logpose-core" }
