[package]
name = "logpose-api-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["prost", "tonic-prost", "prost-build", "protoc-bin-vendored", "tonic-prost-build"]

[dependencies]
logpose-core = { path = "../logpose-core" }
prost.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tonic-prost.workspace = true
tracing.workspace = true

[build-dependencies]
prost-build = "~0.14"
protoc-bin-vendored = "~3.2"
tonic-prost-build = "~0.14"
