[package]
name = "logpose-api-rest"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
logpose-core = { path = "../logpose-core" }
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true

[dev-dependencies]
logpose-config = { path = "../logpose-config" }
tower.workspace = true
