[package]
name = "logpose-api-rest"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
logpose-auth = { path = "../logpose-auth" }
logpose-catalog = { path = "../logpose-catalog" }
logpose-core = { path = "../logpose-core" }
logpose-query = { path = "../logpose-query" }
logpose-service = { path = "../logpose-service" }
logpose-storage = { path = "../logpose-storage" }
logpose-types = { path = "../logpose-types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true

[dev-dependencies]
http-body-util = "~0.1"
logpose-config = { path = "../logpose-config" }
tower.workspace = true
