[package]
name = "logpose-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
logpose-auth = { path = "../logpose-auth" }
logpose-types = { path = "../logpose-types" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
