[package]
name = "logpose-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
logpose-config = { path = "../logpose-config" }
logpose-service = { path = "../logpose-service" }
logpose-types = { path = "../logpose-types" }
serde.workspace = true
