[package]
name = "logpose-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
logpose-catalog = { path = "../logpose-catalog" }
logpose-config = { path = "../logpose-config" }
logpose-query = { path = "../logpose-query" }
logpose-service = { path = "../logpose-service" }
logpose-storage = { path = "../logpose-storage" }
logpose-storage-etcd = { path = "../logpose-storage-etcd" }
logpose-types = { path = "../logpose-types" }
serde.workspace = true

[dev-dependencies]
etcd-client = "0.14"
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
