[package]
name = "logpose-query"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
logpose-storage = { path = "../logpose-storage" }
logpose-types = { path = "../logpose-types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
async-trait.workspace = true
logpose-catalog = { path = "../logpose-catalog" }
tokio.workspace = true
