[package]
name = "logpose-query"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
logpose-catalog = { path = "../logpose-catalog" }
logpose-storage = { path = "../logpose-storage" }
logpose-types = { path = "../logpose-types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
async-trait.workspace = true
criterion = "0.8"
tokio.workspace = true

[[bench]]
name = "phase4_ann"
harness = false
