[package]
name = "logpose-service"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
logpose-catalog = { path = "../logpose-catalog" }
logpose-query = { path = "../logpose-query" }
logpose-storage = { path = "../logpose-storage" }
logpose-types = { path = "../logpose-types" }
thiserror.workspace = true

[dev-dependencies]
axum.workspace = true
http-body-util = "~0.1"
logpose-api-grpc = { path = "../logpose-api-grpc" }
logpose-api-rest = { path = "../logpose-api-rest" }
logpose-config = { path = "../logpose-config" }
logpose-core = { path = "../logpose-core" }
rand = "~0.10"
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
