[package]
name = "logpose-service"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
logpose-auth = { path = "../logpose-auth" }
logpose-catalog = { path = "../logpose-catalog" }
logpose-config = { path = "../logpose-config" }
logpose-query = { path = "../logpose-query" }
logpose-storage = { path = "../logpose-storage" }
logpose-storage-etcd = { path = "../logpose-storage-etcd" }
logpose-types = { path = "../logpose-types" }
flate2.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
async-trait.workspace = true
axum.workspace = true
http-body-util = "~0.1"
logpose-api-grpc = { path = "../logpose-api-grpc" }
logpose-api-rest = { path = "../logpose-api-rest" }
logpose-config = { path = "../logpose-config" }
logpose-core = { path = "../logpose-core" }
rand = "~0.10"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
