[package]
name = "logpose-storage-etcd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
etcd-client = "0.14"
logpose-auth = { path = "../logpose-auth" }
logpose-catalog = { path = "../logpose-catalog" }
logpose-storage = { path = "../logpose-storage" }
logpose-types = { path = "../logpose-types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
