[package]
name = "logpose-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
crc32fast = "1.4"
logpose-catalog = { path = "../logpose-catalog" }
logpose-types = { path = "../logpose-types" }
logpose-wal = { path = "../logpose-wal" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
rand = "~0.8"
tokio.workspace = true
