[package]
name = "logpose-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
crc32fast = "1.4"
logpose-catalog = { path = "../logpose-catalog" }
logpose-index = { path = "../logpose-index" }
logpose-types = { path = "../logpose-types" }
logpose-wal = { path = "../logpose-wal" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
logpose-query = { path = "../logpose-query" }
rand = "0.10.1"
tokio.workspace = true
